--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,29 @@
+<script src="/json.js"></script>
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Ionic Blank
+    <ion-title style="text-align: center;">
+      AVENGERS
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+   
+  </div>
+  <div style="width:245px;display: block;overflow: auto;border:1px solid #000;margin-left: 16%;background: #ccc;"> 
+    <img class="title-image" src="/assets/hulk.svg" width="200" height="100" style="margin-left: 9%;" id="1" (click)="onClick($event)"/> 
+    <img class="title-image" src="/assets/captainamerica.svg" width="200" height="100" style="margin-left: 9%;margin-top: -18%;"  id="2" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;margin-top: -6%;" id="3" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/blackpanther.svg" width="200" height="100" style="margin-left: 9%;margin-top: -7%;" id="4"  (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/ironman.svg" width="200" height="100" style="margin-left: 9%;margin-top: -19%;" id="5" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/doctorstrange.svg" width="200" height="100" style="margin-left: 9%;margin-top: -18%"  id="6" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/blackwidow.svg" width="200" height="100" style="margin-left: 9%;    margin-top: -18%;"  id="7" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;margin-top: -8%;" id="8" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;margin-top: 3%;" id="9" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/hawkeye.svg" width="200" height="100" style="margin-left: 9%;" id="10" (click)="onClick($event)" />
+    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;" id="11" (click)="onClick($event)"/>
+    <img class="title-image" src="/assets/thor.svg" width="200" height="100" style="margin-left: 9%;" id="12" (click)="onClick($event)" />  
+    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;" id="13" (click)="onClick($event)"/>
   </div>
 </ion-content>
