--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,14 @@
+.container_div{
+    width:245px;
+    display: block;
+    overflow: auto;
+    border:1px solid #000;
+    margin-left: 16%;
+    background: #ccc;
+}
 
+
+ion-content{
+
+    --ion-background-color:rgb(82, 87, 83);
+}
