--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,19 +11,7 @@
   <div class="ion-padding">
    
   </div>
-  <div style="width:245px;display: block;overflow: auto;border:1px solid #000;margin-left: 16%;background: #ccc;"> 
-    <img class="title-image" src="/assets/hulk.svg" width="200" height="100" style="margin-left: 9%;" id="1" (click)="onClick($event)"/> 
-    <img class="title-image" src="/assets/captainamerica.svg" width="200" height="100" style="margin-left: 9%;margin-top: -18%;"  id="2" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;margin-top: -6%;" id="3" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/blackpanther.svg" width="200" height="100" style="margin-left: 9%;margin-top: -7%;" id="4"  (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/ironman.svg" width="200" height="100" style="margin-left: 9%;margin-top: -19%;" id="5" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/doctorstrange.svg" width="200" height="100" style="margin-left: 9%;margin-top: -18%"  id="6" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/blackwidow.svg" width="200" height="100" style="margin-left: 9%;    margin-top: -18%;"  id="7" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;margin-top: -8%;" id="8" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;margin-top: 3%;" id="9" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/hawkeye.svg" width="200" height="100" style="margin-left: 9%;" id="10" (click)="onClick($event)" />
-    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;" id="11" (click)="onClick($event)"/>
-    <img class="title-image" src="/assets/thor.svg" width="200" height="100" style="margin-left: 9%;" id="12" (click)="onClick($event)" />  
-    <img class="title-image" src="/assets/empty.png" style="margin-left: 9%;width: 83%;" id="13" (click)="onClick($event)"/>
+  <div *ngFor="let item of toprinted" class="container_div"> 
+    <img class="title-image" src="/assets/{{item.img}}" width="200" height="35" style="margin-left: 9%;"  (click)="navigateTo(item.position)"/> 
   </div>
 </ion-content>
